# clif_synthetic_2.1

./: .gitignore  COMPLIANCE_ACK.template.md  PROVENANCE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
demo_output/: PROVENANCE.md  REPORT.md  clif_adt.parquet  clif_code_status.parquet  clif_crrt_therapy.parquet  clif_ecmo_mcs.parquet  clif_hospitalization.parquet  clif_invasive_hemodynamics.parquet  clif_key_icu_orders.parquet  clif_labs.parquet  clif_medication_admin_continuous.parquet  clif_medication_admin_intermittent.parquet  clif_microbiology_culture.parquet  clif_patient.parquet  clif_patient_assessments.parquet  clif_position.parquet  clif_provider.parquet  clif_respiratory_support.parquet  clif_therapy_details.parquet  clif_transfusion.parquet  clif_truth.parquet  clif_vitals.parquet
docs/plans/: 2026-07-23-001-feature-clif-forge-synthetic-generator-plan.md
scripts/: gen_schemas.py  release_gate.py  vendor_dictionary.py  vendor_reference.py
src/clifforge/: __init__.py  cli.py  provenance.py
src/clifforge/conformance/: __init__.py  cross_check.py  gate.py
src/clifforge/eval/: __init__.py  fidelity.py  privacy.py  report.py  tstr.py
src/clifforge/fit/: __init__.py  cell_gate.py  estimators.py  param_pack.py  run_fit.py  spine_state.py
src/clifforge/generate/: __init__.py  _common.py  orchestrator.py  sampling.py  semimarkov.py  spine.py
src/clifforge/generate/tables/: __init__.py  adt.py  code_status.py  crrt_therapy.py  ecmo_mcs.py  hospitalization.py  invasive_hemodynamics.py  key_icu_orders.py  labs.py  medication_admin_continuous.py  medication_admin_intermittent.py  microbiology_culture.py  patient.py  patient_assessments.py  position.py  provider.py  respiratory_support.py  therapy_details.py  transfusion.py  vitals.py
src/clifforge/reference/: __init__.py  loader.py
src/clifforge/reference/data/: dictionary.json  manifest.json
src/clifforge/reference/data/mcide/adt/: clif_adt_hospital_type.csv  clif_adt_location_categories.csv  clif_adt_location_type.csv
src/clifforge/reference/data/mcide/code_status/: clif_code_status_categories.csv
src/clifforge/reference/data/mcide/crrt_therapy/: clif_crrt_therapy_mode_categories.csv
src/clifforge/reference/data/mcide/hospitalization/: clif_hospitalization_admission_type_categories.csv  clif_hospitalization_discharge_categories.csv
src/clifforge/reference/data/mcide/invasive_hemodynamics/: clif_invasive_hemodynamics_measure_categories.csv
src/clifforge/reference/data/mcide/key_icu_orders/: clif_key_icu_orders_categories.csv
src/clifforge/reference/data/outliers/: outlier_thresholds_adults_vitals.csv  outlier_thresholds_crrt_modes.csv  outlier_thresholds_ecmo_mcs.csv  outlier_thresholds_labs.csv  outlier_thresholds_respiratory_support.csv
src/clifforge/schemas/: __init__.py  adt.py  base.py  code_status.py  crrt_therapy.py  ecmo_mcs.py  hospital_diagnosis.py  hospitalization.py  intake_output.py  invasive_hemodynamics.py  key_icu_orders.py  labs.py  medication_admin_continuous.py  medication_admin_intermittent.py  medication_orders.py  microbiology_culture.py  microbiology_nonculture.py  microbiology_susceptibility.py  patient.py  patient_assessments.py  patient_procedures.py  position.py  provider.py  respiratory_support.py  therapy_details.py  transfusion.py  vitals.py
tests/: conftest.py  test_cli.py  test_provenance.py  test_reference_loader.py  test_release_gate.py
tests/conformance/: test_cross_check.py  test_gate.py
tests/eval/: test_fidelity.py  test_privacy.py  test_report.py  test_tstr.py
tests/fit/: __init__.py  conftest.py  test_cell_gate.py  test_estimators.py  test_param_pack.py  test_run_fit.py  test_spine_state.py
tests/generate/: __init__.py  test_adt.py  test_code_status.py  test_crrt_therapy.py  test_hospitalization.py  test_labs.py  test_medication_admin_continuous.py  test_medication_admin_intermittent.py  test_microbiology_culture.py  test_patient.py  test_patient_assessments.py  test_position.py  test_respiratory_support.py  test_sampling.py  test_semimarkov.py  test_spine.py  test_tier4_integration.py  test_tier6_prior_driven.py  test_vitals.py
tests/schemas/: test_patient.py  test_respiratory_support.py
(+27 files in other folders)
