[project]
name = "clifforge"
version = "0.0.1"
description = "CLIFForge — synthetic CLIF 2.1 ICU dataset generator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "J.C. Rojas" }]
keywords = ["CLIF", "synthetic-data", "ICU", "healthcare"]

# Base dependencies are all permissive (MIT / BSD / Apache-2.0) for
# production redistribution. Heavier / license-sensitive tooling lives in
# optional extras so the default install stays lean and clean.
dependencies = [
    "polars>=1.0",
    "pandera[polars]>=0.20",
    "numpy>=1.26",
    "scipy>=1.11",
    "faker>=25.0",
]

[project.optional-dependencies]
# Utility / fidelity evaluation (R19, R24). Permissive: MIT.
eval = [
    "lightgbm>=4.0",
    "sdmetrics>=0.14",
]
# Privacy metrics only — synthcity's metrics module, isolated here to contain
# its torch dependency tree (R20). Apache-2.0; generators are never imported.
privacy = [
    "synthcity>=0.2.11",
]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "clifpy>=0.5",
]

[project.scripts]
clif-forge = "clifforge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clifforge"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

# clifpy (advisory secondary conformance gate) ships no py.typed marker / stubs.
[[tool.mypy.overrides]]
module = ["clifpy.*"]
ignore_missing_imports = true

# scipy ships no bundled stubs (scipy-stubs is a separate optional package we
# do not depend on); the fit estimators use scipy.stats only for MLE/rank stats.
[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# clifpy's validator internals emit polars streaming-deprecation warnings we can't
# fix upstream; silence just those so the conformance suite output stays readable.
filterwarnings = [
    "ignore:the `streaming` parameter was deprecated:DeprecationWarning",
    # scipy's MLE for gamma/lognorm/weibull emits RuntimeWarnings on degenerate
    # (near-identical) inputs; the sojourn estimator guards with isfinite() and
    # falls back, so these are noise on tiny fabricated fixtures, not defects.
    "ignore::RuntimeWarning:scipy.stats._continuous_distns",
    # polars join_asof can't verify pre-sortedness when 'by' groups are given;
    # the AR1 estimator sorts explicitly before the as-of join.
    "ignore:Sortedness of columns cannot be checked:UserWarning",
]
